--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 height: 100%;
                 margin: 0;
                 text-align: center;
+                overflow-x: hidden;
             }
             #swipeBox {
                 box-sizing: border-box;
