center welcome box

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 background-image: url(Rewards-Icon.svg);
             }
             .welcomeCard {
+                max-width: 320px;
                 height: 50px;
+                margin: 0 auto;
                 background: #fff;
                 line-height: 50px;
                 position: relative;
