set up for mobile landscape and portrait

--- a/index.html
+++ b/index.html
@@ -12,27 +12,42 @@
             <div class="welcomeCard">
                 <span class="js-welcome">Good Morning</span>, Chris!
             </div>
+            <!--<div class="cardWrapper">
+                <div class="card swipe">
+                    <img src="http://lorempixel.com/350/350/">
+                    <div class="cardTitle">Health Assessment</div>
+                    <div class="cardDetails">
+                        Take the Health Assessment to get your Health Score and <em>earn</em> Rewards
+                    </div>
+                </div>
+            </div>-->
             <div class="cardWrapper">
                 <div class="card ha">
-                    <div class="cardTitle">Health Assessment</div>
+                    <div class="cardTitle"><span>Health Assessment</span></div>
                     <div class="cardDetails">Take the Health Assessment to get your Health Score and <em>earn</em> Rewards</div>
                 </div>
             </div>
             <div class="cardWrapper">
                 <div class="card mha">
-                    <div class="cardTitle">My Health Assistant</div>
+                    <div class="cardTitle"><span>My Health Assistant</span></div>
                     <div class="cardDetails">It's a perfect time to create a plan to improve your health</div>
                 </div>
             </div>
-                <div class="cardWrapper">
+            <div class="cardWrapper">
+                <div class="card mpa">
+                    <div class="cardTitle"><span>My Pregnancy Assistant</span></div>
+                    <div class="cardDetails">It's a perfect time to create a plan to improve your health</div>
+                </div>
+            </div>
+            <div class="cardWrapper">
                 <div class="card challenges">
-                    <div class="cardTitle">Challenges</div>
+                    <div class="cardTitle"><span>Challenges</span></div>
                     <div class="cardDetails">We've got healthy challenges starting soon. Want to get involved?</div>
                 </div>
             </div>
-                <div class="cardWrapper">
+            <div class="cardWrapper">
                 <div class="card rewards">
-                    <div class="cardTitle">My Rewards</div>
+                    <div class="cardTitle"><span>My Rewards</span></div>
                     <div class="cardDetails">Participate in the 2016 Reward Yourself Program</div>
                 </div>
             </div>
